add json,other port for test and env vars

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
+# Server 
+PORT=3040
 # DB
-DATABASE_URL=postgres://salesregister:salesregister@localhost/salesregister?sslmode=disable
+DATABASE_URL=postgres://salesregister:salesregister@localhost:5432/salesregister?sslmode=disable
+# Docker
 POSTGRES_PASSWORD=salesregister
 POSTGRES_USER=salesregister
 POSTGRES_DB=salesregister
