--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,18 @@
 services:
+  db:
+    image: postgres:15.0
+    container_name: db-sales-register
+    env_file:
+      - .env
+    volumes:
+      - ../db-data:/var/lib/postgresql/data:cached
+      - /dev/shm:/dev/shm
+    ports:
+      - "5432:5432"
   db-test:
     image: postgres:15.0
     container_name: db-sales-register-test
     env_file:
       - .env
     ports:
-      - "5432:5432"
+      - "5433:5432"
